# RomiSerial

./: CMakeLists.txt  Console.cpp  Console.h  EnvelopeParser.cpp  EnvelopeParser.h  ILog.h  IRomiSerialClient.h  MessageParser.cpp  README.md  RSerial.cpp  RSerial.h  Reader.h  RomiSerial.cpp  RomiSerialClient.cpp  RomiSerialClient.h  UnoLog.cpp  UnoLog.h  json.hpp  rtime.cpp  rtime.h
docs/: Makefile  Readme.md  analogread.cpp  analogread.py  analogread_app  blink.cpp  blink.py  blink_app
docs/analogread/: analogread.ino
docs/blink/: blink.ino
python/: Readme.md  setup.py
python/romiserial/: romiserial.py
python/src/romiserial/: __init__.py
